add fonts + var

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,1 +1,4 @@
 @import "/assets/style/vendors/reset";
+@import "/assets/style/base/fonts";
+@import "/assets/style/base/var";
+@import "/assets/style/base/mixins";
