--- a/assets/style/components/_products.scss
+++ b/assets/style/components/_products.scss
@@ -1,4 +1,42 @@
+body {
+  background-color: $darkBlue;
+}
+
 .product-card {
-  border: 1px solid red;
-  color: red;
+  display: flex;
+  flex-direction: column;
+  color: $white;
+  font-family: $mainFont;
+  margin-bottom: 1rem;
+  p {
+    font-size: 1.7rem;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  span {
+    font-weight: 200;
+    font-size: 1.2rem;
+  }
+  figure {
+    position: relative;
+    height: 300px;
+    aspect-ratio: 16/9;
+    overflow: hidden;
+    box-shadow: rgba(22, 21, 21, 0.14) 0px 3px 6px,
+      rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      transform: scale(0.8);
+    }
+  }
+}
+
+.product-info {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
 }
