--- a/assets/style/components/_products.scss
+++ b/assets/style/components/_products.scss
@@ -30,7 +30,11 @@ body {
       width: 100%;
       height: 100%;
       object-fit: contain;
+      transition: all 0.3s ease;
       transform: scale(0.8);
+      &:hover {
+        transform: scale(0.8) rotate(22deg);
+      }
     }
   }
 }
