--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,7 +1,7 @@
-@import "vendors/reset";
-@import "base/fonts";
-@import "base/var";
-@import "base/mixins";
+@import "assets/style/vendors/reset";
+@import "assets/style/base/fonts";
+@import "assets/style/base/var";
+@import "assets/style/base/mixins";
 
-@import "components/products";
-@import "components/buttons";
+@import "assets/style/components/products";
+@import "assets/style/components/buttons";
