--- a/assets/style/components/_market.scss
+++ b/assets/style/components/_market.scss
@@ -4,6 +4,7 @@ body {
 }
 
 .index {
+    margin-top: 2.5%;
     position:relative;
     display:flex;
     flex-direction: row;
@@ -90,8 +91,71 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 50%;
+    margin-left: 25%;
+    
 
     .shoe {
         width:300px;
+        
+    }
+
+    .provide {
+        font-family: "Nunito Sans", sans-serif;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-size: 4rem;
+        color: white;
+        text-align: center;
+        margin-bottom:2%;
+        .blue {
+            color: #0061BA;
+        }
+    }
+    .text-marketing {
+        color:rgb(177, 177, 177);
+        font-family: "Nunito Sans", sans-serif;
+        text-align: center;
+        font-size: 0.8rem;
+        line-height: 1.8;
+        margin-bottom: 10%;
     }
 }
+
+.opinions {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5%;
+    gap: 5%;
+
+    .article-opinion {
+
+        .people {
+            border-radius:50%;
+            width: 80px;
+            margin-left: 40%;
+            margin-bottom: 5%;
+        }
+    
+        .name {
+            font-family:"Nunito Sans", sans-serif;
+            color: white;
+            font-size:1rem;
+            text-align: center;
+            margin-bottom: 2.5%;
+        }
+    
+        .review {
+            font-family: "Nunito Sans", sans-serif;
+            color:rgb(148, 148, 148);
+            font-size: 0.8rem;
+            text-align: center;
+            line-height: 1.8;
+        }
+
+    }
+
+}
+
