--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -189,7 +189,7 @@ body {
   border: none;
   color: white;
   border-radius: 8px;
-  padding: 1rem;
+  padding: 1rem 1rem;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   letter-spacing: 1;
   cursor: pointer;
@@ -202,6 +202,7 @@ body {
 }
 
 .index {
+  margin-top: 2.5%;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -280,7 +281,58 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 50%;
+  margin-left: 25%;
 }
 .marketing .shoe {
   width: 300px;
+}
+.marketing .provide {
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 4rem;
+  color: white;
+  text-align: center;
+  margin-bottom: 2%;
+}
+.marketing .provide .blue {
+  color: #0061BA;
+}
+.marketing .text-marketing {
+  color: rgb(177, 177, 177);
+  font-family: "Nunito Sans", sans-serif;
+  text-align: center;
+  font-size: 0.8rem;
+  line-height: 1.8;
+  margin-bottom: 10%;
+}
+
+.opinions {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5%;
+  gap: 5%;
+}
+.opinions .article-opinion .people {
+  border-radius: 50%;
+  width: 80px;
+  margin-left: 40%;
+  margin-bottom: 5%;
+}
+.opinions .article-opinion .name {
+  font-family: "Nunito Sans", sans-serif;
+  color: white;
+  font-size: 1rem;
+  text-align: center;
+  margin-bottom: 2.5%;
+}
+.opinions .article-opinion .review {
+  font-family: "Nunito Sans", sans-serif;
+  color: rgb(148, 148, 148);
+  font-size: 0.8rem;
+  text-align: center;
+  line-height: 1.8;
 }/*# sourceMappingURL=style.css.map */
