--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -340,11 +340,76 @@ body {
   display: flex;
   flex-direction: row;
   background-color: #111827;
+  border-bottom: solid 1px rgb(42, 39, 78);
+  justify-content: space-between;
 }
 .topnav .store {
+  padding-left: 15%;
+  display: flex;
+}
+.topnav .store li {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.topnav .store li a {
   text-decoration: none;
   color: white;
+  font-family: "Nunito Sans", sans-serif;
+  padding: 20px 10px 20px 10px;
 }
-.topnav .login .cart {
+.topnav .store li a:hover {
+  color: #fcd34d;
+  background-color: #020e24;
+  border-radius: 5%;
+}
+.topnav .homeAbout {
+  display: flex;
+  gap: 30px;
+}
+.topnav .homeAbout li {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.topnav .homeAbout li a {
+  text-decoration: none;
+  color: white;
+  font-family: "Nunito Sans", sans-serif;
+  padding: 20px 10px 20px 10px;
+}
+.topnav .homeAbout li a:hover {
+  color: #fcd34d;
+  background-color: #020e24;
+  border-radius: 5%;
+}
+.topnav .login {
+  padding-right: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.topnav .login li {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.topnav .login li a {
+  text-decoration: none;
+  color: white;
+  margin-right: 10px;
+  font-family: "Nunito Sans", sans-serif;
+  padding: 20px 10px 20px 10px;
+}
+.topnav .login li a:hover {
+  color: #fcd34d;
+  background-color: #020e24;
+  border-radius: 5%;
+}
+.topnav .login li .cart {
   width: 25px;
+  filter: brightness(200%) invert(100%);
 }/*# sourceMappingURL=style.css.map */
