--- a/assets/style/components/_nav.scss
+++ b/assets/style/components/_nav.scss
@@ -2,19 +2,89 @@
     display:flex;
     flex-direction: row;
     background-color: #111827;
+    border-bottom: solid 1px rgb(42, 39, 78);
+    justify-content: space-between;
     
     .store {
-        text-decoration: none;
-        color: white;
+        padding-left: 15%;
+        display:flex;
+
+        li {
+            list-style-type: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            
+            a {
+                text-decoration: none;
+                color: white;
+                font-family: "Nunito Sans", sans-serif;
+                padding: 20px 10px 20px 10px;
+            
+                &:hover {
+                    color: #fcd34d;
+                    background-color:#020e24;
+                    border-radius:5%;
+                }
+            }
+        }
     }
 
     .homeAbout {
+        display:flex;
+        gap:30px;
+
+        li {
+            list-style-type: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            
+            a {
+                text-decoration: none;
+                color: white;
+                font-family: "Nunito Sans", sans-serif;
+                padding: 20px 10px 20px 10px;
+
+                &:hover {
+                    color: #fcd34d;
+                    background-color:#020e24;
+                    border-radius:5%;
+                }
+            }
+        }
 
     }
 
     .login {
-        .cart {
-            width: 25px;
+        padding-right: 15%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        li {
+            list-style-type: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+           
+            a {
+                text-decoration: none;
+                color: white;
+                margin-right: 10px;
+                font-family: "Nunito Sans", sans-serif;
+                padding: 20px 10px 20px 10px;
+
+                &:hover {
+                    color: #fcd34d;
+                    background-color:#020e24;
+                    border-radius:5%;
+                }
+            }
+            .cart {
+                width: 25px;
+                filter: brightness(200%) invert(100%);
+            }
         }
     }
 }
