--- a/assets/style/components/_buttons.scss
+++ b/assets/style/components/_buttons.scss
@@ -8,4 +8,9 @@
   letter-spacing: 1;
   cursor: pointer;
   font-size: 0.7rem;
+  transition: all 0.2s ease;
+  &:hover {
+    background-color: $white;
+    color: $highBlue;
+  }
 }
