--- a/assets/style/components/_nav.scss
+++ b/assets/style/components/_nav.scss
@@ -84,6 +84,10 @@
         width: 25px;
         filter: brightness(200%) invert(100%);
       }
+      span {
+        font-weight: 200;
+        font-size: 0.9rem;
+      }
     }
   }
 }
