--- a/assets/style/components/_cart.scss
+++ b/assets/style/components/_cart.scss
@@ -38,6 +38,15 @@
   margin: 2rem 0;
 }
 
+.cart-empty {
+  text-align: center;
+  color: $white;
+  font-size: 1rem;
+  font-family: $mainFont;
+  padding: 2rem 0;
+  font-weight: 200;
+}
+
 #price-total {
   color: white;
   font-family: $mainFont;
