contact & about pages

--- a/assets/style/components/_products.scss
+++ b/assets/style/components/_products.scss
@@ -1,5 +1,6 @@
 body {
-  background-color: $darkBlue;
+  background: rgb(17,24,39);
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(17,24,39,1) 50%);
 }
 
 .product-card {
