--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -10,3 +10,5 @@
 @import "./components/cart";
 @import "./components/footer";
 @import "./components/carousel";
+@import "./components/about";
+@import "./components/contacts";
