--- a/assets/style/components/_carousel.scss
+++ b/assets/style/components/_carousel.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 5%;
+    margin-top: 2%;
     gap: 5%;
 
     .article-opinion {
