--- a/assets/style/components/_cart.scss
+++ b/assets/style/components/_cart.scss
@@ -33,7 +33,7 @@
 .cart-checkout {
   width: 100%;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   margin: 2rem 0;
 }
