--- a/assets/style/components/_footer.scss
+++ b/assets/style/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   flex-direction: row;
-  background-color: #111827;
+  background-color: black;
   border-top: solid 1px rgb(42, 39, 78);
   justify-content: space-between;
   justify-content: center;
