--- a/assets/style/components/_market.scss
+++ b/assets/style/components/_market.scss
@@ -9,7 +9,7 @@ body {
     display:flex;
     flex-direction: row;
     height: 400px;
-    border-bottom: solid rgb(142, 144, 170) 0.1px;
+    border-bottom: solid 1px rgb(42, 39, 78);
     justify-content: space-around;
 
         .intro {
@@ -122,40 +122,4 @@ body {
     }
 }
 
-.opinions {
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 5%;
-    gap: 5%;
-
-    .article-opinion {
-
-        .people {
-            border-radius:50%;
-            width: 80px;
-            margin-left: 40%;
-            margin-bottom: 5%;
-        }
-    
-        .name {
-            font-family:"Nunito Sans", sans-serif;
-            color: white;
-            font-size:1rem;
-            text-align: center;
-            margin-bottom: 2.5%;
-        }
-    
-        .review {
-            font-family: "Nunito Sans", sans-serif;
-            color:rgb(148, 148, 148);
-            font-size: 0.8rem;
-            text-align: center;
-            line-height: 1.8;
-        }
-
-    }
-
-}
 
