--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -135,7 +135,8 @@ table {
 }
 
 body {
-  background-color: #111827;
+  background: rgb(17, 24, 39);
+  background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(17, 24, 39) 50%);
 }
 
 .product-card {
@@ -211,7 +212,7 @@ body {
   display: flex;
   flex-direction: row;
   height: 400px;
-  border-bottom: solid rgb(142, 144, 170) 0.1px;
+  border-bottom: solid 1px rgb(42, 39, 78);
   justify-content: space-around;
 }
 .index .intro {
@@ -310,35 +311,6 @@ body {
   font-size: 0.8rem;
   line-height: 1.8;
   margin-bottom: 10%;
-}
-
-.opinions {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 5%;
-  gap: 5%;
-}
-.opinions .article-opinion .people {
-  border-radius: 50%;
-  width: 80px;
-  margin-left: 40%;
-  margin-bottom: 5%;
-}
-.opinions .article-opinion .name {
-  font-family: "Nunito Sans", sans-serif;
-  color: white;
-  font-size: 1rem;
-  text-align: center;
-  margin-bottom: 2.5%;
-}
-.opinions .article-opinion .review {
-  font-family: "Nunito Sans", sans-serif;
-  color: rgb(148, 148, 148);
-  font-size: 0.8rem;
-  text-align: center;
-  line-height: 1.8;
 }
 
 .topnav {
@@ -454,7 +426,7 @@ body {
 .cart-checkout {
   width: 100%;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   margin: 2rem 0;
 }
@@ -483,7 +455,7 @@ body {
 .footer {
   display: flex;
   flex-direction: row;
-  background-color: #111827;
+  background-color: black;
   border-top: solid 1px rgb(42, 39, 78);
   justify-content: space-between;
   justify-content: center;
@@ -517,6 +489,7 @@ body {
   justify-content: center;
   align-items: center;
   margin-bottom: 5%;
+  margin-top: 2%;
   gap: 5%;
 }
 .opinions .article-opinion .people {
@@ -538,4 +511,120 @@ body {
   font-size: 0.8rem;
   text-align: center;
   line-height: 1.8;
+}
+
+.story {
+  padding-top: 2%;
+  padding-bottom: 2%;
+  border-bottom: solid 1px rgb(42, 39, 78);
+}
+.story h2 {
+  font-family: "Nunito Sans", sans-serif;
+  color: white;
+  font-size: 4rem;
+  text-align: center;
+  padding-bottom: 2%;
+}
+.story p {
+  font-family: "Nunito Sans", sans-serif;
+  color: grey;
+  font-size: 1.2rem;
+  text-align: center;
+  width: 900px;
+  margin-left: 15%;
+  line-height: 1.3;
+}
+
+.quality {
+  padding-top: 2%;
+  padding-bottom: 2%;
+  border-bottom: solid 1px rgb(42, 39, 78);
+}
+.quality h2 {
+  font-family: "Nunito Sans", sans-serif;
+  color: white;
+  font-size: 4rem;
+  text-align: center;
+  padding-bottom: 2%;
+}
+.quality p {
+  font-family: "Nunito Sans", sans-serif;
+  color: grey;
+  font-size: 1.2rem;
+  text-align: center;
+  width: 900px;
+  margin-left: 15%;
+  line-height: 1.3;
+}
+
+.reviews {
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+.reviews h2 {
+  font-family: "Nunito Sans", sans-serif;
+  color: white;
+  font-size: 4rem;
+  text-align: center;
+  padding-bottom: 2%;
+}
+
+.info {
+  display: flex;
+  flex-direction: row;
+  gap: 20%;
+  margin: 2% 0% 5% 0%;
+}
+
+.contact {
+  border-right: solid 1px rgb(42, 39, 78);
+  width: 50%;
+}
+.contact .formContact {
+  color: white;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 2rem;
+  text-align: center;
+}
+.contact form {
+  padding-top: 2.5%;
+}
+.contact form label {
+  color: white;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 1rem;
+}
+.contact form input {
+  width: 500px;
+  margin: 0% 0% 5% 0%;
+}
+.contact form .inputMessage {
+  height: 200px;
+}
+.contact form .btn {
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 1rem;
+}
+
+.network ul {
+  text-align: center;
+}
+.network ul .following {
+  color: white;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 2rem;
+  margin-bottom: 25%;
+}
+.network ul li {
+  list-style-type: none;
+}
+.network ul li img {
+  width: 40px;
+  filter: brightness(200%) invert(100%);
+}
+.network ul li i {
+  font-size: 2rem;
+  color: white;
+  text-align: center;
+  margin: 5% 0% 5% 0%;
 }/*# sourceMappingURL=style.css.map */
