--- a/assets/style/components/_market.scss
+++ b/assets/style/components/_market.scss
@@ -1,161 +1,164 @@
-body {
-    margin-left: 5%;
-    margin-right:5%;
-}
-
 .index {
-    margin-top: 2.5%;
-    position:relative;
-    display:flex;
-    flex-direction: row;
-    height: 400px;
-    border-bottom: solid rgb(142, 144, 170) 0.1px;
-    justify-content: space-around;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  padding-bottom: 5%;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  height: 400px;
+  border-bottom: solid rgb(142, 144, 170) 0.1px;
+  justify-content: space-around;
+  overflow: hidden;
 
-        .intro {
-            display:flex;
-            flex-direction: column;
-            justify-content: center;
-            width: 45%;
-
-            h2 {
-                font-size: 5rem;
-                font-family: "Nunito Sans", sans-serif;
-                font-weight:bold;
-                text-transform: uppercase;
-                color:white;
-                
-                .blue {
-                    color: #0061BA;
-                }
-            }
-            .see-store {
-                background: linear-gradient(90deg, #49A8FF 0%, #007CEE 100%);
-                border: none;
-                color: $white;
-                border-radius: 8px;
-                padding: 1rem;
-                box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-                letter-spacing: 1;
-                cursor: pointer;
-                margin-top:10px;
-                width: 150px;
-            }
-        }
-
-        .images {
-            display:flex;
-            flex-direction: row;
-            width: 45%;
-    
-            .shoe{
-                width:400px;
-                position: absolute;
-                z-index:1;
-                margin-left:50px;
-            }
-            .logo {
-                width: 550px;
-                z-index:0;
-                position:absolute;
-                margin-top:80px;
-            }
-    }
-}
-
-.latest-product {
-    margin-top: 2.5%;
-    margin-bottom: 5%;
-
-    h3 {
-        font-size: 20px;
-        font-family: "Nunito Sans", sans-serif;
-        font-weight:bold;
-        color:white;
-        margin-bottom: 40px;
-        
-        .blue {
-            color: #0061BA;
-        }
-    }
-
-    .products {
-        display: flex; 
-        flex-direction: row;
-        justify-content: space-around;
-    }
-}
-
-.marketing {
+  .intro {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    max-width: 50%;
-    margin-left: 25%;
-    
+    width: 45%;
+
+    h2 {
+      font-size: 5rem;
+      font-family: "Nunito Sans", sans-serif;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: white;
+
+      .blue {
+        color: #0061ba;
+      }
+    }
+    .see-store {
+      background: linear-gradient(90deg, #49a8ff 0%, #007cee 100%);
+      border: none;
+      color: $white;
+      border-radius: 8px;
+      padding: 1rem;
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      letter-spacing: 1;
+      cursor: pointer;
+      margin-top: 10px;
+      width: 150px;
+    }
+  }
+
+  .images {
+    display: flex;
+    flex-direction: row;
+    width: 45%;
 
     .shoe {
-        width:300px;
-        
+      width: 400px;
+      position: absolute;
+      z-index: 1;
+      margin-left: 50px;
     }
+    .logo {
+      width: 550px;
+      z-index: 0;
+      position: absolute;
+      margin-top: 80px;
+    }
+  }
+}
 
-    .provide {
-        font-family: "Nunito Sans", sans-serif;
-        font-weight: bold;
-        text-transform: uppercase;
-        font-size: 4rem;
-        color: white;
-        text-align: center;
-        margin-bottom:2%;
-        .blue {
-            color: #0061BA;
-        }
+.latest-product {
+  margin: 5% 5%;
+
+  h3 {
+    font-size: 2rem;
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: bold;
+    color: white;
+    margin-bottom: 40px;
+
+    .blue {
+      color: #0061ba;
     }
-    .text-marketing {
-        color:rgb(177, 177, 177);
-        font-family: "Nunito Sans", sans-serif;
-        text-align: center;
-        font-size: 0.8rem;
-        line-height: 1.8;
-        margin-bottom: 10%;
+  }
+
+  .products {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+}
+
+.marketing {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 50%;
+  margin-left: 25%;
+
+  .shoe {
+    width: 300px;
+  }
+
+  .provide {
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 4rem;
+    color: white;
+    text-align: center;
+    margin-bottom: 2%;
+    .blue {
+      color: #0061ba;
     }
+  }
+  .text-marketing {
+    color: rgb(177, 177, 177);
+    font-family: "Nunito Sans", sans-serif;
+    text-align: center;
+    font-size: 0.8rem;
+    line-height: 1.8;
+    margin-bottom: 10%;
+  }
 }
 
 .opinions {
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 5%;
-    gap: 5%;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1rem;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 5% 0;
+  gap: 5%;
 
-    .article-opinion {
-
-        .people {
-            border-radius:50%;
-            width: 80px;
-            margin-left: 40%;
-            margin-bottom: 5%;
-        }
-    
-        .name {
-            font-family:"Nunito Sans", sans-serif;
-            color: white;
-            font-size:1rem;
-            text-align: center;
-            margin-bottom: 2.5%;
-        }
-    
-        .review {
-            font-family: "Nunito Sans", sans-serif;
-            color:rgb(148, 148, 148);
-            font-size: 0.8rem;
-            text-align: center;
-            line-height: 1.8;
-        }
-
+  .article-opinion {
+    width: 300px;
+    .people {
+      border-radius: 50%;
+      width: 80px;
+      margin-left: 40%;
+      margin-bottom: 5%;
     }
 
+    .name {
+      font-family: "Nunito Sans", sans-serif;
+      color: white;
+      font-size: 1rem;
+      text-align: center;
+      margin-bottom: 2.5%;
+    }
+
+    .review {
+      font-family: "Nunito Sans", sans-serif;
+      color: rgb(148, 148, 148);
+      font-size: 0.8rem;
+      text-align: center;
+      line-height: 1.8;
+    }
+  }
 }
 
+@media (max-width: 468px) {
+  .index {
+    margin-right: 0;
+    margin-left: 0;
+  }
+}
