--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -12,3 +12,4 @@
 @import "./components/carousel";
 @import "./components/about";
 @import "./components/contacts";
+@import "./components/validContact";
