--- a/assets/style/components/_validContact.scss
+++ b/assets/style/components/_validContact.scss
@@ -9,8 +9,8 @@ p {
     margin-top: 50px;
 }
 
-.btn {
-    margin-left: 30%;
-    margin-top: 5%;
-    font-size: 2rem;
-}
+// .btn {
+//     margin-left: 30%;
+//     margin-top: 5%;
+//     font-size: 2rem;
+// }
