--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -758,4 +758,8 @@ body {
 
 .space {
   margin-top: 50px;
+  color: white;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 2rem;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
