--- a/assets/style/components/_validContact.scss
+++ b/assets/style/components/_validContact.scss
@@ -7,6 +7,10 @@
 
 .space {
     margin-top: 50px;
+    color: white;
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 2rem;
+    text-align: center;
 }
 
 // .btn {
