--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -14,3 +14,4 @@
 @import "./components/about";
 @import "./components/contacts";
 @import "./components/validContact";
+@import "./components/newMessage";
