--- a/assets/style/components/_newMessage.scss
+++ b/assets/style/components/_newMessage.scss
@@ -1,25 +1,18 @@
-.textinfo{
-    margin: 5% 0% 5% 0%;
-    .contactinfo {
-        color: white;
-        font-family: "Nunito Sans", sans-serif;
-        font-size: 2rem;
-        text-align: center;
-    }
-}
-
-.space {
-    margin-top: 50px;
-    color: white;
-    font-family: "Nunito Sans", sans-serif;
-    font-size: 2rem;
-    text-align: center;
-}
-
-.btns-cont {
+.newmessage {
+    color:white;
+    font-family:"Nunito Sans", sans-serif;
+    font-size: 4rem;
+    max-width: 50rem;
     text-align:center;
-    margin-bottom:2%;
-    .btns {
+    margin: 0 auto;
+    margin-top:5%;
+}
+
+.btnback-cont {
+    text-align:center;
+    margin-top:10%;
+    margin-bottom:10%;
+    .btnback { 
         background-color: $highBlue;
         border: none;
         color: $white;
@@ -28,7 +21,7 @@
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         letter-spacing: 1;
         cursor: pointer;
-        font-size: 1rem;
+        font-size: 0.7rem;
         transition: all 0.2s ease;
         margin: 0 auto;
         &:hover {
