--- a/assets/style/components/_footer.scss
+++ b/assets/style/components/_footer.scss
@@ -6,6 +6,9 @@
   justify-content: space-between;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 
   .homeAbout {
     display: flex;
