--- a/assets/style/components/_formu.scss
+++ b/assets/style/components/_formu.scss
@@ -1,54 +1,74 @@
+.checkout-container {
+  display: flex;
+  width: 100%;
+  .cart-container {
+    width: 50%;
+  }
+  .checkout-form {
+    width: 50%;
+  }
+}
+
 .success {
-    color: #07ee07;
-    font-weight: bold;
-    margin-top: 10px;
-    text-align: center;
-    font-family:$mainFont;
+  color: #328c32;
+  font-weight: bold;
+  margin-top: 10px;
+  text-align: center;
+  font-family: $mainFont;
 }
 
 .checkout-form {
-    max-width: 500px;
-    margin: 0 auto;
-    margin-top: 15px;
-    padding: 20px;
-    padding-bottom: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-family: $mainFont;
-    color: $white;
-    label {
-        display: block;
-        margin-bottom: 10px;
-        font-weight: bold;
-    }
-    input[type="text"],
-    input[type="email"]{
-        width: 100%;
-   
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  margin: 2rem 1rem;
+  margin-top: 15px;
+  padding: 20px;
+  padding-bottom: 5px;
+  border-radius: 8px;
+  font-family: $mainFont;
+  color: $white;
+  label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+  input[type="text"],
+  input[type="email"] {
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-radius: 8px;
     font-size: 16px;
     font-family: $mainFont;
-    background:#eee4ec;
-    color:black;
-    
-   
-   
+    background: $white;
+    color: black;
+  }
+  input[type="submit"] {
+    background-color: $highBlue;
+    color: $white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    font-family: $mainFont;
+    font-weight: 400;
+    letter-spacing: 1;
+  }
+  input[type="submit"]:hover {
+    background-color: #328c32;
+  }
+}
+
+@media (max-width: 768px) {
+  .checkout-container {
+    display: flex;
+    flex-direction: column;
+    .cart-container {
+      width: 90%;
+      margin: 0 auto;
     }
-    input[type="submit"] {
-        background-color: $highBlue;
-        color: $white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        font-family: $mainFont;
-        font-weight: bold;
-        
+    .checkout-form {
+      margin: 0 auto;
+      width: 90%;
     }
-    input[type="submit"]:hover {
-        background-color: #cb8fbf;
-    }
-    
+  }
 }
