--- a/assets/style/components/_about.scss
+++ b/assets/style/components/_about.scss
@@ -15,7 +15,7 @@
         font-size: 1.2rem;
         text-align: center;
         width: 900px;
-        margin-left: 15%;
+        margin: 0 auto;
         line-height: 1.3;
     }
 }
@@ -37,7 +37,7 @@
         font-size: 1.2rem;
         text-align: center;
         width: 900px;
-        margin-left: 15%;
+        margin: 0 auto;
         line-height: 1.3;
     }
 }
