--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -651,7 +651,7 @@ body {
   font-size: 1.2rem;
   text-align: center;
   width: 900px;
-  margin-left: 15%;
+  margin: 0 auto;
   line-height: 1.3;
 }
 
@@ -673,7 +673,7 @@ body {
   font-size: 1.2rem;
   text-align: center;
   width: 900px;
-  margin-left: 15%;
+  margin: 0 auto;
   line-height: 1.3;
 }
 
