--- a/assets/style/components/_nav.scss
+++ b/assets/style/components/_nav.scss
@@ -9,22 +9,26 @@
     padding-left: 5%;
     display: flex;
 
-    li {
-      list-style-type: none;
+    ul {
       display: flex;
-      justify-content: center;
-      align-items: center;
+      flex-direction: row;
+      li {
+        list-style-type: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-      a {
-        text-decoration: none;
-        color: white;
-        font-family: "Nunito Sans", sans-serif;
-        padding: 20px 10px 20px 10px;
+        a {
+          text-decoration: none;
+          color: white;
+          font-family: "Nunito Sans", sans-serif;
+          padding: 20px 10px 20px 10px;
 
-        &:hover {
-          color: #fcd34d;
-          background-color: #020e24;
-          border-radius: 5%;
+          &:hover {
+            color: #fcd34d;
+            background-color: #020e24;
+            border-radius: 5%;
+          }
         }
       }
     }
@@ -34,22 +38,26 @@
     display: flex;
     gap: 30px;
 
-    li {
-      list-style-type: none;
+    ul {
       display: flex;
-      justify-content: center;
-      align-items: center;
+      flex-direction: row;
+      li {
+        list-style-type: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-      a {
-        text-decoration: none;
-        color: white;
-        font-family: "Nunito Sans", sans-serif;
-        padding: 20px 10px 20px 10px;
+        a {
+          text-decoration: none;
+          color: white;
+          font-family: "Nunito Sans", sans-serif;
+          padding: 20px 10px 20px 10px;
 
-        &:hover {
-          color: #fcd34d;
-          background-color: #020e24;
-          border-radius: 5%;
+          &:hover {
+            color: #fcd34d;
+            background-color: #020e24;
+            border-radius: 5%;
+          }
         }
       }
     }
@@ -61,33 +69,37 @@
     justify-content: center;
     align-items: center;
 
-    li {
-      list-style-type: none;
+    ul {
       display: flex;
-      justify-content: center;
-      align-items: center;
+      flex-direction: row;
+      li {
+        list-style-type: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-      a {
-        text-decoration: none;
-        color: white;
-        margin-right: 10px;
-        font-family: "Nunito Sans", sans-serif;
-        padding: 20px 10px 20px 10px;
+        a {
+          text-decoration: none;
+          color: white;
+          margin-right: 10px;
+          font-family: "Nunito Sans", sans-serif;
+          padding: 20px 10px 20px 10px;
 
-        &:hover {
-          color: #fcd34d;
-          background-color: #020e24;
-          border-radius: 5%;
+          &:hover {
+            color: #fcd34d;
+            background-color: #020e24;
+            border-radius: 5%;
+          }
         }
-      }
-      .cart {
-        width: 25px;
+        .cart {
+          width: 25px;
 
-        filter: brightness(200%) invert(100%);
-      }
-      span {
-        font-weight: 200;
-        font-size: 0.9rem;
+          filter: brightness(200%) invert(100%);
+        }
+        span {
+          font-weight: 200;
+          font-size: 0.9rem;
+        }
       }
     }
   }
