--- a/assets/style/components/_footer.scss
+++ b/assets/style/components/_footer.scss
@@ -1,3 +1,10 @@
+footer {
+  position: absolute;
+  bottom: 0;
+  height: 0px;
+  width: 100%;
+}
+
 .footer {
   display: flex;
   flex-direction: row;
