--- a/assets/style/components/_cart.scss
+++ b/assets/style/components/_cart.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 0.9rem;
   border-bottom: 1px solid rgba(65, 102, 187, 0.495);
   margin-bottom: 2rem;
   .cart-product {
@@ -64,6 +65,9 @@
 @media screen and (min-width: 768px) {
   .shopping-cart {
     margin: 0 10%;
+  }
+  .cart-item {
+    font-size: 1rem;
   }
   .cart-checkout {
     margin: 0 -10%;
