--- a/assets/style/components/_formu.scss
+++ b/assets/style/components/_formu.scss
@@ -30,17 +30,17 @@
     display: block;
     margin-bottom: 10px;
     font-weight: 200;
+    font-size: 0.9rem;
   }
   input[type="text"],
   input[type="email"] {
     width: 100%;
     height: 30px;
-    border: none;
+    border: 0.5px solid rgba(65, 102, 187, 0.495);
     border-radius: 8px;
-    font-size: 16px;
     font-family: $mainFont;
-    background: $white;
-    color: black;
+    background: transparent;
+    color: $white;
   }
   input[type="submit"] {
     background-color: $highBlue;
