--- a/assets/style/components/_validContact.scss
+++ b/assets/style/components/_validContact.scss
@@ -4,6 +4,7 @@ body {
 
 .textinfo{
     margin: 5% 0% 5% 0%;
+    height: 80vh;
     .contactinfo {
         color: white;
         font-family: "Nunito Sans", sans-serif;
@@ -22,7 +23,8 @@ body {
 
 .btns-cont {
     text-align:center;
-    margin-bottom:2%;
+    padding-bottom:2rem;
+
     .btns {
         background-color: $highBlue;
         border: none;
@@ -41,3 +43,4 @@ body {
         }
     }
 }
+
