--- a/assets/style/components/_newMessage.scss
+++ b/assets/style/components/_newMessage.scss
@@ -1,3 +1,7 @@
+.valid {
+    height: 80vh;
+}
+
 .newmessage {
     color:white;
     font-family:"Nunito Sans", sans-serif;
@@ -28,5 +32,17 @@
             background-color: $white;
             color: $highBlue;
         }
+    }
+}
+
+@media (max-width: 468px) {
+    .newmessage {
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 468px) and (max-width: 1055px) {
+    .newmessage {
+        font-size: 3rem;
     }
 }
