--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -467,7 +467,7 @@ body {
   }
 }
 .cart-container {
-  margin: 2rem 1rem;
+  margin: 0 1rem;
 }
 
 .cart-item {
@@ -627,7 +627,7 @@ footer {
 }
 .checkout-container .checkout-form {
   width: 50%;
-  margin-top: 2rem;
+  margin-top: 3rem;
 }
 
 .success {
